welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: '<-' expected but ')' found.
  for (i1 to 4) {
              ^PatternPicture:8: error: illegal start of simple expression
}
^